[package]
name = "enigma"
version = "0.1.0"
authors = ["Sirui Mu <msrlancern@126.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "2.33.3", optional = true }
serde = { version = "1.0.124", optional = true, features = ["derive"] }
serde_json = { version = "1.0.64", optional = true }

[features]
binary = ["clap", "serde", "serde_json"]

[[bin]]
name = "enigma-cli"
required-features = ["binary"]
